--- a/irish_times_sentiment_analysis.ipynb
+++ b/irish_times_sentiment_analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -117,7 +117,7 @@
        "4     Learning about the star to which we owe life  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "1425459  Benign outlook for US-China trade talks lifts ...  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "4     Learning about the star to which we owe life  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
        "4     Learning about the star to which we owe life     0.0000  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,16 +515,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x168c70dcb88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2980274a088>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -551,6 +551,125 @@
     "fig, ax = plt.subplots()\n",
     "df_by_month[\"sentiment\"].plot(ax=ax)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### All Categories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>headline_category</th>\n",
+       "      <th>headline_text</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1996-01-02</td>\n",
+       "      <td>news</td>\n",
+       "      <td>UUP sees possibility of voting Major out</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1996-01-02</td>\n",
+       "      <td>news</td>\n",
+       "      <td>Pubs targeted as curbs on smoking are extended</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1996-01-02</td>\n",
+       "      <td>news</td>\n",
+       "      <td>Papers reveal secret links with O'Neill cabinet</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1996-01-02</td>\n",
+       "      <td>news</td>\n",
+       "      <td>Domestic chaos as Italy takes EU presidency</td>\n",
+       "      <td>-0.5719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>1996-01-02</td>\n",
+       "      <td>news</td>\n",
+       "      <td>Learning about the star to which we owe life</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  publish_date headline_category  \\\n",
+       "0   1996-01-02              news   \n",
+       "1   1996-01-02              news   \n",
+       "2   1996-01-02              news   \n",
+       "3   1996-01-02              news   \n",
+       "4   1996-01-02              news   \n",
+       "\n",
+       "                                     headline_text  sentiment  \n",
+       "0         UUP sees possibility of voting Major out     0.0000  \n",
+       "1   Pubs targeted as curbs on smoking are extended     0.0000  \n",
+       "2  Papers reveal secret links with O'Neill cabinet     0.0000  \n",
+       "3      Domestic chaos as Italy takes EU presidency    -0.5719  \n",
+       "4     Learning about the star to which we owe life     0.0000  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['sentiment'] = data['headline_text'].apply(sent_analysis)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
